fixed position sticky in chrome not working cuz parrent had overflow hidden

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ table * {
 }
 
 table {
-  overflow: hidden;
   box-shadow: 0px 15px 75px 45px rgba(33, 1, 33, 0.71);
   width: 500px;
   max-width: 500px;
